--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(project1)
-add_executable(project1 main.cpp)
+add_executable(project1 main.cpp Student.h Student.cpp Tree.h Tree.cpp)
